APNG decoder: only decode the frames up to haltAtFrame https://bugs.webkit.org/show_bug.cgi?id=146205

Patch by Max Stepin <maxstepin@gmail.com> on 2016-01-02
Reviewed by Michael Catanzaro.

No new tests, already covered by existing tests.

* platform/image-decoders/png/PNGImageDecoder.cpp:
(WebCore::PNGImageReader::close):
(WebCore::PNGImageReader::decode):
(WebCore::PNGImageDecoder::isSizeAvailable):
(WebCore::PNGImageDecoder::frameBufferAtIndex):
(WebCore::PNGImageDecoder::pngComplete):
(WebCore::PNGImageDecoder::decode):
* platform/image-decoders/png/PNGImageDecoder.h:
(WebCore::PNGImageDecoder::isComplete):
(WebCore::PNGImageDecoder::isCompleteAtIndex):

Canonical link: https://commits.webkit.org/170741@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194503 268f45cc-cd09-0410-ab3c-d52691b4dbfc